# tron

./: README.md  main.py  pyproject.toml  requirements.txt
agent/: __init__.py  agent.py  etf_agent.py
agent/.adk/: session.db
src/: __init__.py  main.py
src/etf/: __init__.py  models.py  router.py
tests/: __init__.py  test_etf_api.py  test_mcp.py
